--- a/client/src/components/FormButton/index.css
+++ b/client/src/components/FormButton/index.css
@@ -14,7 +14,6 @@
     0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
   color: #fff;
-  margin-top: 90px;
   margin-bottom: 5px;
 }
 
