--- a/client/src/components/FormHeading/index.css
+++ b/client/src/components/FormHeading/index.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Libre Bodoni');
-@import url('https://fonts.googleapis.com/css?family=Libre Franklin');
 .form_heading {
   text-align: center;
-  margin: 50px 0;
+  margin: 0;
+  max-width: 80vw;
 }
 
 .form_heading__title {
@@ -10,6 +9,7 @@
   font-weight: 400;
   font-size: 3rem;
   color: #3f3f3f;
+  margin: 0;
   margin-bottom: 0;
 }
 
@@ -18,11 +18,6 @@
     Arial, sans-serif;
   color: #939393;
   font-size: 1.5rem;
+  margin: 0;
   margin-top: 0;
-}
-
-@media screen and (max-width: 800px) {
-  .form_heading {
-    margin: 50px 0 100px 0;
-  }
 }
